--- a/regression/miniproject-1/classification/2024AIML019.ipynb
+++ b/regression/miniproject-1/classification/2024AIML019.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Assignment 1 - Classification - Credit Card Fraud Detection using K-Nearest Neighbors (KNN) Algorithm\n",
-    "#### Student: Rahul (2024AIML019)\n",
-    "#### Date: 2025-02-08\n"
+    "### Assignment 1 - Classification - Credit Card Fraud Detection using K-Nearest Neighbors (KNN) Algorithm\n"
    ]
   },
   {
